<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/squares"
        android:paddingLeft="40dp"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/squares" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cubes"
        android:paddingLeft="40dp"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/cubes" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powers2"
        android:paddingLeft="40dp"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/powers_2" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powers3"
        android:paddingLeft="40dp"
        android:textSize="20dp"
        android:id="@+id/powers_3" />
</LinearLayout>